@@ -1,3 +1,7 @@
+Sun Jun 25 23:02:12 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in, mkconfig.rb: catch-up for latest autoconf.
+
 Thu May 25 01:52:07 2006  nobuyoshi nakada  <nobu@ruby-lang.org>
 
 	* mkconfig.rb: merge multiple entries to an entry with multiple lines.
